--- a/meteo/index.html
+++ b/meteo/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
+    <link rel="stylesheet" href="./src/assets/icofont/icofont.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meteo App</title>
   </head>
